fixed input file appearance on firefox

--- a/assets/less/admin.less
+++ b/assets/less/admin.less
@@ -11,3 +11,8 @@ body { padding: 50px 0; }
     div { max-width: 100%; }
     &.well img { max-width: 92%; }
 }
+
+.form-control {
+    height: auto;
+    min-height: 34px;
+}
